syntax = "proto3";

package proto.currency.rules;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/fedosb/currency-monitor/proto/currency";

service RateService {
  rpc GetByNameAndDate(GetByNameAndDateRequest) returns (GetByNameAndDateResponse) {}
  rpc GetByNameAndDateRange(GetByNameAndDateRangeRequest) returns (GetByNameAndDateRangeResponse) {}
}


message Rate {
  uint64 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string name = 4;
  google.protobuf.Timestamp date = 5;
  double rate = 6;
}

message GetByNameAndDateRequest {
  string name = 1;
  google.protobuf.Timestamp date = 2;
}

message GetByNameAndDateResponse {
  Rate rate = 1;
}

message GetByNameAndDateRangeRequest {
  string name = 1;
  google.protobuf.Timestamp from = 2;
  google.protobuf.Timestamp to = 3;
}

message GetByNameAndDateRangeResponse {
  repeated Rate rates = 1;
}
